Fixing a small bug for overflow

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
 		scroll-behavior: smooth;
 	}
 
+	body {
+		overflow-x: hidden;
+	}
+
 	textarea::placeholder {
 		color: oklch(var(--p));
 	}
